--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "docker:build": "docker build -t ilovelili/ramen-dao .",
+    "docker:run": "docker run -p 80:80 ilovelili/ramen-dao"
   },
   "eslintConfig": {
     "extends": [
